--- a/_posts/2024-01-18-디자이너 실행.md
+++ b/_posts/2024-01-18-디자이너 실행.md
@@ -1,7 +1,7 @@
 ---
 title: "디자이너 기초"
 date: 2024-01-18 +0900
-categories: [IntegrationServer, 설치 및 사용법]
+categories: [Webmethods, 설치 및 개발가이드]
 tags: [EAI, webmethods]
 ---
 
