feat: posts order

--- a/_posts/2024-01-25-파이프라인에 대한 이해 및 Public 패키지.md
+++ b/_posts/2024-01-25-파이프라인에 대한 이해 및 Public 패키지.md
@@ -3,6 +3,7 @@ title: "파이프라인에 대한 이해 및 Public패키지"
 date: 2024-01-25 +0900
 categories: [Webmethods, 설치 및 개발가이드]
 tags: [EAI, webmethods]
+order: 3
 ---
 
 
