--- a/_posts/2024-02-07-대시보드_개요.md
+++ b/_posts/2024-02-07-대시보드_개요.md
@@ -3,6 +3,7 @@ title: "대시보드 개요"
 date: 2024-02-07 +0900
 categories: [Webmethods Administrator, 대시보드 사용]
 tags: [EAI, webmethods, Administrator]
+order: 1
 ---
 
 Integration Server 관리자에는 주요 시스템 및 서버 측정항목을 읽기 쉬운 형식으로 표시하는 대시보드가 포함되어 있습니다. 포괄적인 대시보드는 IS 서버의 시스템 상태, 상태, 사용 패턴 및 전반적인 성능을 모니터링하는 데 도움이 됩니다. 대시보드에는 **Server > Statistics** 페이지에
