--- a/_posts/2024-02-07-대시보드_APIs탭.md
+++ b/_posts/2024-02-07-대시보드_APIs탭.md
@@ -3,6 +3,7 @@ title: "APIs tab"
 date: 2024-02-07 +0900
 categories: [Webmethods Administrator, 대시보드 사용]
 tags: [EAI, webmethods, Administrator]
+order: 6
 ---
 
 API 탭에는 REST, SOAP, ODATA, GRAPHQL, WEBSOCKET API 호출을 포함하는 모든 API 호출에 대한 데이터가 통합 되어 있습니다.
