--- a/_posts/2024-02-07-대시보드_service탭.md
+++ b/_posts/2024-02-07-대시보드_service탭.md
@@ -3,6 +3,7 @@ title: "Service tab"
 date: 2024-02-07 +0900
 categories: [Webmethods Administrator, 대시보드 사용]
 tags: [EAI, webmethods, Administrator]
+order: 5
 ---
 
 
