--- a/_posts/2024-02-07-대시보드_usages탭.md
+++ b/_posts/2024-02-07-대시보드_usages탭.md
@@ -3,6 +3,7 @@ title: "Usages tab"
 date: 2024-02-07
 categories: [Webmethods Administrator, 대시보드 사용]
 tags: [EAI, webmethods, Administrator]
+order: 4
 ---
 
 Usages 탭에는 서버 사용량 통계가 표시됩니다. 클러스터의 모든 노드에서 통합된 세션과 요청 데이터를 볼 수 있습니다.
