--- a/_posts/2024-02-16-프론트엔드 백엔드 차이.md
+++ b/_posts/2024-02-16-프론트엔드 백엔드 차이.md
@@ -41,7 +41,7 @@ order: 1
 - 구축된 건물의 시설과 기반등을 안전하고 효율적으로 운영
 - 사용자 또는 방문자가 직접 보지 못하지만 핵심적인 역할을 담당
 
-위와 같이 백엔드 개발자는 데이터베이스와 서버를 구축하여 프론트엔드에서 필요로 하는 데이터를 제공하고, 프론트엔드로부터의 요청을 처리한다. 마치 엘리베이터가 예쁜 문이 잘 열리고 버튼을 누르면 각 층으로 잘 움직일 수 있는것처럼 사용자에게 직접 보이지 않지만 건물 전체를 지탱하고 지원하는 역할을 한다.
+위와 같이 백엔드 개발자는 데이터베이스와  서버를 구축하여 프론트엔드에서 필요로 하는 데이터를 제공하고, 프론트엔드로부터의 요청을 처리한다. 마치 엘리베이터가 예쁜 문이 잘 열리고 버튼을 누르면 각 층으로 잘 움직일 수 있는것처럼 사용자에게 직접 보이지 않지만 건물 전체를 지탱하고 지원하는 역할을 한다.
 
 이러한 비유를 통해 프론트엔드와 백엔드가 각각 사용자와 직접적으로 상호작용하는 부분과 그 뒤에서 데이터와 구조를 지탱하는 부분으로 나누어짐을 이해 할 수 있으며 함께 동작하여 완성된 건물, 즉 웹 애플리케이션은 프론트엔드와 백엔드의 효과적인 협업과 통합으로 가능해짐을 알 수 있다.
 
@@ -63,3 +63,5 @@ order: 1
 ---
 
 사실, 백엔드 개발자가 되고 싶은 이유에 대해 작성해보니, 나는 백엔드 개발자가 되고 싶다기보다는 개발자가 되고 싶은 것 같다. 눈 앞에 놓인 문제들을 해결하고 코드의 유지보수성과 가독성 같은 것들을 고민하는 것은 백엔드 개발에만 필요한 것이 아닌 모든 개발자에게 해당하는 것이다. 나는 대체로 이런 것들에 재미를 느끼는 것 같다. 또 처음 내가 개발을 시작할 때 생각했던 것 처럼, 지금은 백엔드 개발에 충분히 재미를 느끼고 있지만, 나중에는 프론트엔드도 물론이지만 게임 개발 같은 것도 한 번 배워보고 싶은 생각도 있다.
+
+[![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbeaverdw.github.io%2Fposts%2F%25ED%2594%2584%25EB%25A1%25A0%25ED%258A%25B8%25EC%2597%2594%25EB%2593%259C-%25EB%25B0%25B1%25EC%2597%2594%25EB%2593%259C-%25EC%25B0%25A8%25EC%259D%25B4%2F&count_bg=%23000000&title_bg=%23555555&icon=jekyll.svg&icon_color=%23E7E7E7&title=blog&edge_flat=false)](https://hits.seeyoufarm.com)
